# lab4SLAM

./: .gitignore  CMakeLists.txt  README.md  build_Lab0.sh  build_thirdparty.sh  trajectory.txt  trajectory4.txt
Apps/: CMakeLists.txt
Documentation/: Lab0.md
Lab0/: CMakeLists.txt
Lab0/Apps/: CMakeLists.txt  task_1.cc  task_2.cc  task_3.cc
Lab0/Data/: PisosTrain.txt
Lab0/Modules/: CMakeLists.txt
Lab0/Modules/Optimization/: RegressionEdge.cc  RegressionEdge.h  WeightVertex.cc  WeightVertex.h
Lab0/Modules/Regresion/: Regression.cc  Regression.h
Modules/: CMakeLists.txt
Modules/Calibration/: PinHole.cc
Modules/Mapping/: LocalMapping.cc
Modules/Matching/: DescriptorMatching.cc
Modules/Optimization/: g2oTypes.h
Modules/System/: MiniSLAM.cc
Modules/Tracking/: Tracking.cc
Modules/Utils/: Geometry.cc
